2003-07-08  Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
      * tagged the current version as Version0_3 (i.e. version 0.3)

2003-07-08  Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
      * vtk/testvtkGdcmReader.cxx : remove a symbol that is unused
      * src/jpeg/libijg8/jmorecfg.h : adding export symbol for windows
      * *.dsp : modifications to use new libgdcmijpeg8 library
      * setup.py : bug fix on VTKPATH variable
      * PACKAGER : adding all concerning windows

2003-07-07  Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
      * src/gdcmElValSet.cxx, gdcmFile.cxx: JPR bug fix, removal of
        garbage debug code.
      * TODO, vtk/vtkGdcmReader.cxx: upcoming fixes comments.
      * gdcmPython/testSuite.py: JPR bug fix, brutal erasement of
        test suite reported error.
      * PACKAGER file added (describes what a packager must do when
        packaging a new release).
      * MANIFEST.in, now declares jconfig.linux and jconfig.vc
      * configure.in: upgraded version number to 0.3.0
      * fixing build of rpm (through rpm -ta):
        - Doc/Makefile.am exports proper doxygen files
        - src/jpeg/libijg8/Makefile.am exports the include files.

2003-07-07  Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
      * vtk/vtkGdcmReader.cxx : bug fix when loading only 1 file.
      * src/gdcmHeader.h : formatting code

2003-07-07  Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
      * vtk/vtkGdcmReader.[cxx|h] : bug fix when loading only one file.
        We were obtaining error message from vtk. Now, creation of file list
        is made in an internal list to prevent this problem.
        Bug fix when output is empty.
        Bug fix in update of progress value. Previous commit for this was a bad
        correction.
      * vtk/vtkGdcmReader.h : adding comments for InternalFileNaleList variable

2003-07-04  Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
      * src/gdcmHeader.h : added method to get the file name