@@ -1,0 +1,8 @@
+*.o
+*.so
+.deps
+.libs
+Makefile.in
+Makefile
+*.lo
+*.la
