@@ -1,0 +1,7 @@
+#ifdef _MSC_VER
+   #include "jconfig.vc"
+#endif
+#ifdef __GNUC__
+   #include "jconfig.linux"
+#endif
+
